# Termi

./: .gitignore  CODE.md  CONTRIBUTING.md  Christmas-spam.sh  Christmas-spam.txt  Commands.md  LICENSE  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
PackageManager/: CMakeLists.txt  Database.hpp  PackageManager.cpp  PackageManager.h  PackageManager.hpp  pkg
Programs/: Include.h  compile.bat
Programs/Linux/: Filesystem.cpp  GeoCalculator.cpp  help.cpp
TSh/: README.md
TSh/src/: Makefile  reader.hpp  repl.cpp
TSh/src/includes/: linenoise.hpp
Term-Linux/: Termi.cpp
Termi-Linux/: CMakeLists.txt  Calc.cpp  Calc.h  Commands.cpp  Commands.h  Geocalc.h  Termi  Termi.cpp  Termi.h  clean.sh  compile.sh  main.cpp  main.h
Termi-Linux-OpenGL/: Access.hpp  CMakeCache.txt  CMakeLists.txt  Command.cpp  Makefile  Settings.hpp  Termi-OpenGL  Translation.hpp  cmake_install.cmake  cmbal_io.h  imgui.ini  imgui_code.cpp  imgui_code.hpp  imgui_commands.cpp  imgui_main.cpp  main.cpp  settings.txt
Termi-Linux-OpenGL/Cmbal/examples/: writeln.cmbal
Termi-Linux-OpenGL/Cmbal/include/: helper.h  lexer.h  main.h  parser.h  scope.h  visitor.h
Termi-Linux-OpenGL/Cmbal/src/: AST.c  helper.c  io.c  lexer.c  parser.c  scope.c  token.c  visitor.c
Termi-Linux-OpenGL/Commands/: Geocalc.h  Neofetch.hpp  base64.hpp  calc.hpp  filesys.hpp  other.hpp  ping.hpp  sysfetch.hpp  termi.hpp  time.hpp
Termi-Linux-OpenGL/imgui_file_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
Termi-Linux/Commands/: Calc.h  Filesys.cpp  Filesys.h  GeoCalc.cpp  GeoCalc.h  Neofetch.cpp  Neofetch.h  OpenCalc.cpp  OpenCalc.h
Termi-Other/: compile_all.sh
Termi-Other/Termi-Commands/: CMakeCache.txt  CMakeLists.txt  Commands.cpp  Export.h  Makefile  cmake_install.cmake
Termi-Other/Termi-Commands/Commands/: base64.hpp  filesys.hpp  ping.hpp  sysfetch.hpp
Termi-Other/Termi-GUI/: CMakeCache.txt  CMakeLists.txt  Makefile  Settings.hpp  Translation.hpp  cmake_install.cmake  font.inl  glad.c  imgui.ini  imgui_code.hpp  imgui_main.cpp  main.cpp
Termi-Other/Termi-GUI/includes/: glad.h
Termi-Other/Termi-Main/: CMakeCache.txt  CMakeLists.txt  Makefile  Termi-Main  cmake_install.cmake  imgui.ini  main.cpp
Termi-Other/rtest/src/: lib.rs
Termi-Windows/Installer/: Termi-Installer.iss  Termi-Installer2.iss  Termi.iss
Termi-Windows/Installer - Copy/: Termi-Installer.iss
Termi-Windows/Termi/: Check.cpp  Check.hpp  Commands.h  Header.h  RCa02300  Termi.cpp  Termi.h  Termi.rc  Termi.sln  Termi.vcxproj  Termi.vcxproj.filters  Termi1.aps  Termi1.rc  Useful.hpp  resource.h  resource1.h
Termi-Windows/Termi-Commands/: Commands.cpp  Export.h  Termi-Commands.sln  Termi-Commands.vcxproj  Termi-Commands.vcxproj.filters  Test.cpp  Test.h  dirent.h  sysfetch.hpp
Termi-Windows/Termi-Commands/Commands/: Geocalc.h  base64.hpp
Termi-Windows/Termi-Commands/x64/Debug/: Termi-Commands.dll.recipe  vc143.idb  (+5 more)
Termi-Windows/Termi-GUI/: Export.h  Settings.hpp  Termi-GUI.sln  Termi-GUI.vcxproj  Termi-GUI.vcxproj.filters  Translation.hpp  imgui_code.hpp  imgui_commands.cpp  imgui_main.cpp  limits.h  main.cpp  main.h
Termi-Windows/Termi-GUI/Commands/: Geocalc.h  base64.hpp  calc.hpp  other.hpp  sysfetch.hpp  time.hpp
Termi-Windows/Termi-GUI/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
Termi-Windows/Termi-Launcher/: MainWindow.xaml  MainWindow.xaml.cs  Termi-Launcher.csproj  app.manifest
Termi-Windows/Termi-Launcher - Copy/: MainWindow.xaml.cs
Termi-Windows/Termi-Main/: Program.cs  Termi-Main.csproj  Termi-Main.sln
Termi-Windows/Termi-OpenGL/: Settings.hpp  Termi-OpenGL.sln  Termi-OpenGL.vcxproj  Termi-OpenGL.vcxproj.filters  Translation.hpp  glad.c  imgui.ini  imgui_code.cpp  imgui_code.hpp  imgui_commands.cpp  imgui_main.cpp  main.cpp  settings.json
Termi-Windows/Termi-OpenGL/Commands/: Geocalc.h  Neofetch.hpp  base64.hpp  calc.hpp  filesys.hpp  other.hpp  ping.hpp  termi.hpp  time.hpp
Termi-Windows/Termi-OpenGL/imgui/: imgui_widgets.cpp
Termi-Windows/Termi-Runner-Console/: Applications.cs  Functions.cs  Input.cs  Program.cs  Termi-Runner-Console.csproj  Termi-Runner-Console.sln
Termi-Windows/Termi-Runner-Console/Properties/: launchSettings.json
Termi-Windows/rtest/: Cargo.toml
Termi-Windows/rtest/src/: lib.rs
src/: compile_all.sh  zip_file.ps1
src/Termi-Commands/: .gitignore  CMakeCache.txt  CMakeLists.txt  Commands.cpp  Export.h  Makefile  Termi-Commands.exp  Termi-Commands.lib  cmake_install.cmake  dirent.h  main.cpp
src/Termi-Commands/Commands/: Geocalc.h  base64.hpp  filesys.hpp  sysfetch.hpp
src/Termi-GUI/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Settings.hpp  Translation.hpp  advanced_console.cpp  advanced_console.hpp  client.cpp  client.hpp  cmake_install.cmake  glad.c  imgui_code.hpp  imgui_main.cpp  main.cpp  server.cpp  server.hpp  settings.cpp  settings.hpp  simple_console.cpp  simple_console.hpp  simple_gui.cpp  translation.hpp
src/Termi-GUI/imgui/: imgui_impl_glfw.cpp
src/Termi-GUI/network/: server.hpp
src/Termi-GUI/utils/: settings.cpp  settings.hpp
src/Termi-Main/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Termi-Main  cmake_install.cmake  imgui.ini  main.cpp
src/Termi-Shell/: CMakeLists.txt  main.cpp
src/rtest/src/: lib.rs
tlib/: CMakeLists.txt  CMakelists.txt  test.cpp  test.lesper  tlib  tlib.h  util.cpp
tlib/src/: main.cpp  port.hpp  tlib.cpp  tlib.hpp  util.hpp
tlib/utils/vim-nvim_syntax/: copy.sh
tools/: chunck.txt  chunck1.txt  chunck2.txt  chunck3.txt  chunck4.txt  chunck5.txt  copy_dll.py  windows_generator.py
utils/Installer/: Termi.iss
utils/Termi-Launcher/: App.xaml  App.xaml.cs  MainWindow.xaml.cs  Termi-Launcher.csproj  Termi-Launcher.sln
utils/Termi-client/: CMakeCache.txt  CMakeLists.txt  Makefile  Termi-client  client.cpp  cmake_install.cmake
windows-release/: Version.txt
windows-release/Debug/settings/: settings.json
windows-release/Release/: imgui.ini
windows-release/Release/settings/: settings.json
(+92 files in other folders)
